--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.4",
+    "babel-runtime": "^6.26.0",
     "bcrypt": "^3.0.6",
     "meteor-node-stubs": "^0.4.1"
   },
